Create header and cpp files

--- a/3_sem/AisD/lab_2/Second_step_of_evolution/Second_step_of_evolution.vcxproj.filters
+++ b/3_sem/AisD/lab_2/Second_step_of_evolution/Second_step_of_evolution.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="Second_step_of_evolution.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Types_of_sorting.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Called_sorting.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Types_of_sorting.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Called_sorting.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
