delete someone header and cpp file and create unittests

--- a/3_sem/AisD/lab_2/UnitTest1/UnitTest1.vcxproj.filters
+++ b/3_sem/AisD/lab_2/UnitTest1/UnitTest1.vcxproj.filters
@@ -15,12 +15,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Second_step_of_evolution.cpp">
+    <ClCompile Include="UnitTest1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Types_of_sorting.h">
+    <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
