--- a/3_sem/AisD/lab_3/Third_step_of_evolution/Third_step_of_evolution/Third_step_of_evolution.vcxproj
+++ b/3_sem/AisD/lab_3/Third_step_of_evolution/Third_step_of_evolution/Third_step_of_evolution.vcxproj
@@ -141,6 +141,10 @@
   <ItemGroup>
     <ClCompile Include="Third_step_of_evolution.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Queue.h" />
+    <ClInclude Include="Stack.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
