Add iterators and contains

--- a/3_sem/AisD/lab_3/Third_step_of_evolution/Third_step_of_evolution/Third_step_of_evolution.vcxproj
+++ b/3_sem/AisD/lab_3/Third_step_of_evolution/Third_step_of_evolution/Third_step_of_evolution.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="Third_step_of_evolution.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Iterator.h" />
     <ClInclude Include="Queue.h" />
     <ClInclude Include="Stack.h" />
   </ItemGroup>
