--- a/3_sem/AisD/lab_3/Third_step_of_evolution/Third_step_of_evolution/Third_step_of_evolution.vcxproj.filters
+++ b/3_sem/AisD/lab_3/Third_step_of_evolution/Third_step_of_evolution/Third_step_of_evolution.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Stack.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Iterator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
