--- a/3_sem/AisD/Eternal_despair_anti_social/Eternal_despair_anti_social/Eternal_despair_anti_social.vcxproj
+++ b/3_sem/AisD/Eternal_despair_anti_social/Eternal_despair_anti_social/Eternal_despair_anti_social.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="Eternal_despair_anti_social.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Stack.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
