--- a/3_sem/AisD/Eternal_despair_anti_social/Eternal_despair_anti_social/Eternal_despair_anti_social.vcxproj
+++ b/3_sem/AisD/Eternal_despair_anti_social/Eternal_despair_anti_social/Eternal_despair_anti_social.vcxproj
@@ -142,7 +142,7 @@
     <ClCompile Include="Eternal_despair_anti_social.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Queue.h" />
+    <ClInclude Include="Functions.h" />
     <ClInclude Include="Stack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
