--- a/3_sem/AisD/Eternal_despair_anti_social/Eternal_despair_anti_social/Eternal_despair_anti_social.vcxproj.filters
+++ b/3_sem/AisD/Eternal_despair_anti_social/Eternal_despair_anti_social/Eternal_despair_anti_social.vcxproj.filters
@@ -23,7 +23,7 @@
     <ClInclude Include="Stack.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Queue.h">
+    <ClInclude Include="Functions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
