All methods are successfuly performed

--- a/4_sem/AisD/Black_red_Tree/Black_red_Tree/Black_red_Tree.vcxproj
+++ b/4_sem/AisD/Black_red_Tree/Black_red_Tree/Black_red_Tree.vcxproj
@@ -140,12 +140,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Black_red_Tree.cpp" />
+    <ClCompile Include="LinkedList.cpp" />
     <ClCompile Include="Tree.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DFT_iterator.h" />
     <ClInclude Include="Elem.h" />
     <ClInclude Include="Iterator.h" />
+    <ClInclude Include="LinkedList.h" />
+    <ClInclude Include="LinkedListElem.h" />
     <ClInclude Include="Stack.h" />
     <ClInclude Include="Tree.h" />
   </ItemGroup>
